# sign_visual_pretrain

./: .gitignore  pyproject.toml  run.sh
configs/: base_eval.yaml  base_train.yaml
configs/data/: ph14t_*x224x224.yaml  ph14t_*x224x224_pt.yaml  ph14t_*x224x224_video.yaml
configs/engine/: base_engine.yaml
configs/model/: base_model.yaml  convnext.yaml  resnet.yaml
notebooks/: data_viz.py  logits_viz.py
src/csi_sign_pretrain/commands/: train.py
src/csi_sign_pretrain/configuration_sign_visual/: configuration.py
src/csi_sign_pretrain/data/: datamodule.py
src/csi_sign_pretrain/data/collators/: pretrain_collator.py  video_collator.py
src/csi_sign_pretrain/data/ph14t/: ph14t_pretrain_torch_dataset.py  ph14t_torch_dataset.py
src/csi_sign_pretrain/data/piplines/: pretrain_pipline.py  video_pipline.py
src/csi_sign_pretrain/data/processors/: processor.py  sign_video_processor.py
src/csi_sign_pretrain/engine/: callbacks.py  trainer.py  training_args.py
src/csi_sign_pretrain/misc/: git_utils.py  utils.py
src/csi_sign_pretrain/modeling_sign_visual/: convnext.py  dinov2_with_token_sampler.py  ouput_utils.py  registry.py  resnet.py  sign_pt_model.py
tests/: test_data.py  test_model.py
