[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csi-sign-visual-pretrain"
version = "0.1.0"
description = "a package for contrastive visual pretraining for sign language"
authors = [{ name = "Jingyan Wang", email = "wayenvan@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["scikit-learn", "torch"]

[project.urls]
homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]
